@@ -1,17 +1,19 @@
 *.elc
 *.info
 /lisp/bbdb-loaddefs.el
+/lisp/bbdb-site.el
+/lisp/bbdb-pkg.el
 /lisp/TAGS
+/doc/bbdb.pdf
+/doc/bbdb.t2p/
+/doc/texinfo.tex
+/doc/dir
 Makefile
 Makefile.in
 /autom4te.cache/
 /config.*
 /configure
 /aclocal.m4
-/doc/bbdb.pdf
-/doc/bbdb.t2p/
-/doc/texinfo.tex
 /install-sh
 /INSTALL
-/lisp/bbdb-site.el
 /missing
